# terminal-menu

./: CONTRIBUTING.md  LICENSE  README.md  setup.cfg
src/: terminal_menu.py
src/os_interfaces/: linux_interface.py  windows_interface.py
