[metadata]
name = terminal-menu
version = 0.1.0
author = Christopher James
author_email = mindful.d3v@gmail.com
description = A CLI menu tool for creating interactive terminal menus.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mindful-Developer/terminal-menu
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Code Generators
    Environment :: Console

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
